--- a/src/styles/tokens/layout.scss
+++ b/src/styles/tokens/layout.scss
@@ -11,5 +11,5 @@ $max-content-width: 800px;
 
 $content-padding: map.get(spacing.$px, 24);
 
-$default-mobile-spacing: 48;
-$default-desktop-spacing: 96;
+$default-mobile-spacing: 64;
+$default-desktop-spacing: 128;
